16_subseq/grade.txt
Grading at Sun Jan 31 12:04:45 UTC 2021
Attempting to compile maxSeq.c 
maxSeq.c: In function ‘maxSeq’:
maxSeq.c:24:2: error: ‘tampmax’ undeclared (first use in this function)
  tampmax = 1;
  ^
maxSeq.c:24:2: note: each undeclared identifier is reported only once for each function it appears in
The code did not compile!

Overall Grade: F
